Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/processes/index.html
+++ b/v/0.3.0/processes/index.html
@@ -979,20 +979,20 @@
 <p>Another process graph can be referenced with the process <code>process_graph</code>. This could even be an externally hosted process graph.</p>
 <h4 id="arguments_3">Arguments</h4>
 <ul>
-<li><code>imagery</code> <em>(required)</em>: Image collection to apply the process graph to</li>
 <li><code>uri</code> <em>(required)</em>: An URI to a process graph.</li>
+<li><code>variables</code>: An object holding key-value-pairs with values for variables that are defined by the process graph. The key of the pair has to be the corresponding <code>variable_id</code> for the value specified. The replacement for the variable is the value of the pair.</li>
 </ul>
 <h4 id="examples_3">Examples</h4>
 <pre><code>{
   &quot;process_id&quot;:&quot;process_graph&quot;,
-  &quot;imagery&quot;:{
-    &quot;process_id&quot;:&quot;get_data&quot;,
+  &quot;uri&quot;:&quot;http://otherhost.org/api/v1/users/12345/process_graphs/abcdef&quot;,
+  &quot;variables&quot;: {
     &quot;data_id&quot;:&quot;Sentinel2A-L1C&quot;
-  },
-  &quot;uri&quot;:&quot;http://otherhost.org/api/v1/users/12345/process_graphs/abcdef&quot;
+  }
 }
 </code></pre>
 
+<p><code>data_id</code> is a variable defined by the process graph stored at <code>http://otherhost.org/api/v1/users/12345/process_graphs/abcdef</code> and should be replaced with the string <code>Sentinal2A-L1C</code>.</p>
 <h3 id="to-be-continued"><em>to be continued...</em></h3>
                 
                   
