Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/jobs/index.html
+++ b/v/0.3.0/jobs/index.html
@@ -777,8 +777,7 @@ Body:
           &quot;bottom&quot;:5181000,
           &quot;srs&quot;:&quot;EPSG:32632&quot;
         },
-        &quot;from&quot;:&quot;2017-01-01&quot;,
-        &quot;to&quot;:&quot;2017-01-31&quot;
+        &quot;extent&quot;:&quot;2017-01-01/2017-01-31&quot;
       },
       &quot;red&quot;:&quot;B04&quot;,
       &quot;nir&quot;:&quot;B8A&quot;
@@ -834,8 +833,7 @@ Body:
         &quot;bottom&quot;:47.2,
         &quot;srs&quot;:&quot;EPSG:4326&quot;
       },
-      &quot;from&quot;:&quot;2017-01-01&quot;,
-      &quot;to&quot;:&quot;2017-01-31&quot;
+      &quot;extent&quot;:&quot;2017-01-01/2017-01-31&quot;
     },
     &quot;regions&quot;:&quot;/users/me/files/&quot;,
     &quot;func&quot;:&quot;avg&quot;
