--- a/v/0.3.0/processes/index.html
+++ b/v/0.3.0/processes/index.html
@@ -1004,12 +1004,12 @@
 <p>Allows to filter an image collection by temporal extent.</p>
 <h3 id="arguments_2">Arguments</h3>
 <ul>
-<li><code>imagery</code> <em>(required)</em>: Image collection to filter</li>
-</ul>
-<p>And at least one of:</p>
-<ul>
-<li><code>from</code>: Includes all data newer than the specified ISO 8601 date or date-time with simultaneous consideration of <code>to</code>.</li>
-<li><code>to</code>: Includes all data older than the specified ISO 8601 date or date-time with simultaneous consideration of <code>from</code>.</li>
+<li>
+<p><code>imagery</code> <em>(required)</em>: Image collection to filter</p>
+</li>
+<li>
+<p><code>extent</code>: A temporal extent as specified in the <a href="https://open-eo.github.io/openeo-api/v/0.3.0/guidelines-api/index.html#temporal-data">API guidelines</a>.</p>
+</li>
 </ul>
 <h4 id="examples_2">Examples</h4>
 <pre><code>{
@@ -1018,8 +1018,7 @@
     &quot;process_id&quot;:&quot;get_data&quot;,
     &quot;data_id&quot;:&quot;Sentinel2A-L1C&quot;
   },
-  &quot;from&quot;:&quot;2017-01-01&quot;,
-  &quot;to&quot;:&quot;2017-01-31&quot;
+  &quot;extent&quot;:&quot;2017-01-01/2017-01-31&quot;
 }
 </code></pre>
 
