--- a/v/0.3.0/processgraphs/index.html
+++ b/v/0.3.0/processgraphs/index.html
@@ -809,8 +809,7 @@
         &quot;bottom&quot;:5181000,
         &quot;srs&quot;:&quot;EPSG:32632&quot;
       },
-      &quot;from&quot;:&quot;2017-01-01&quot;,
-      &quot;to&quot;:&quot;2017-01-31&quot;
+      &quot;extent&quot;:&quot;2017-01-01/2017-01-31&quot;
     },
     &quot;red&quot;:&quot;B04&quot;,
     &quot;nir&quot;:&quot;B8A&quot;
