Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/guidelines-api/index.html
+++ b/v/0.3.0/guidelines-api/index.html
@@ -870,6 +870,7 @@
 <p>Generally, English language MUST be used for all names, documentation etc.</p>
 <p>In the specification the key words “MUST”, “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”, “RECOMMENDED”, “MAY”, and “OPTIONAL” in this document are to be interpreted as described in <a href="http://tools.ietf.org/html/rfc2119">RFC 2119</a>.</p>
 <h3 id="casing">Casing</h3>
+<p>Unless otherwise stated the API works case sensitive.</p>
 <p>All names SHOULD be written in snake case, i.e. words are separated with one underscore character (_) and no spaces, with all letters lowercased. Example: <code>hello_world</code>. This applies particularly to endpoints and JSON property names. HTTP header fields follow their respective casing conventions, e.g. <code>Content-Type</code> or <code>OpenEO-Costs</code>, despite being case-insensitive according to <a href="https://tools.ietf.org/html/rfc7230#section-3.2">RFC 7230</a>.</p>
 <h2 id="technical-requirements">Technical requirements</h2>
 <h3 id="http">HTTP</h3>
