Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/arch/index.html
+++ b/v/0.3.0/arch/index.html
@@ -623,9 +623,10 @@
 <li>API instances can run on back-end servers or additional intermediate layers, which then communicate to back-ends in a back-end specific way.</li>
 <li>Back-ends may add functionality and extend the API wherever there is need.</li>
 <li>There will be a central back-end registry service (openEO Hub), to allow users to search for back-ends with specific functionality and or data. </li>
-<li>The openEO API will define <em>profiles</em> in order group specific functionality.</li>
+<li>The openEO API may define <em>profiles</em> in order group specific functionality.</li>
 </ol>
-<p><img alt="Architecture" src="../img/arch.png" /></p>
+<p><img alt="Architecture - openEO API shown in dark blue" src="../img/arch.png" />
+<em>Figure: Architecture - openEO API shown in dark blue</em></p>
 <h1 id="microservices">Microservices</h1>
 <p>To simplify and structure the development, the API is divided into a few microservices.</p>
 <table>
