--- a/v/0.3.0/errors/index.html
+++ b/v/0.3.0/errors/index.html
@@ -820,12 +820,12 @@
 <p>Server errors are defined as the server failing to correctly return in response to a valid client request. These are generally "5xx" HTTP error codes. Server errors <em>do</em> contribute to the overall API availability. Calls that fail due to rate limiting or quota failures MUST NOT count as server errors. </p>
 <h2 id="json-error-object">JSON error object</h2>
 <p>A JSON error object SHOULD be sent with all responses that have a status code between 400 and 599.</p>
-<div class="codehilite"><pre><span></span>{
-  &quot;id&quot;: &quot;936DA01F-9ABD-4D9D-80C7-02AF85C822A8&quot;,
-  &quot;code&quot;: 123,
-  &quot;message&quot;: &quot;A sample error message.&quot;,
-  &quot;url&quot;: &quot;http://www.openeo.org/docs/errors/123&quot;
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;id&quot;</span><span class="p">:</span> <span class="s2">&quot;936DA01F-9ABD-4D9D-80C7-02AF85C822A8&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;code&quot;</span><span class="p">:</span> <span class="mi">123</span><span class="p">,</span>
+  <span class="nt">&quot;message&quot;</span><span class="p">:</span> <span class="s2">&quot;A sample error message.&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;url&quot;</span><span class="p">:</span> <span class="s2">&quot;http://www.openeo.org/docs/errors/123&quot;</span>
+<span class="p">}</span>
 </pre></div>
 
 <p>Sending <code>code</code> and <code>message</code> is REQUIRED. </p>
