--- a/v/0.3.0/processes/index.html
+++ b/v/0.3.0/processes/index.html
@@ -938,7 +938,7 @@
 </ul>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
-<p>Currently there are only few defined processes. Those are currently only meant as an example how future documentation of processes may look like.</p>
+<p>Currently, there are only few defined processes. Those are only meant as an example how future documentation of processes may look like.</p>
 </div>
 <h3 id="get_data">get_data</h3>
 <p>Filters and selects a single dataset provided by the back-end.</p>
@@ -953,18 +953,18 @@
 </ul>
 <p>The back-end provider decides which of the potential datasets is the most relevant one to be selected.</p>
 <h4 id="examples">Examples</h4>
-<div class="codehilite"><pre><span></span>{
-  &quot;process_id&quot;: &quot;get_data&quot;,
-  &quot;data_id&quot;:&quot;Sentinel2A-L1C&quot;
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2A-L1C&quot;</span>
+<span class="p">}</span>
 </pre></div>
 
-<div class="codehilite"><pre><span></span>{
-  &quot;process_id&quot;: &quot;get_data&quot;,
-  &quot;platform&quot;: &quot;landsat-7&quot;,
-  &quot;sensor&quot;: &quot;modis&quot;, 
-  &quot;derived_from&quot;: null
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;process_id&quot;</span><span class="p">:</span> <span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;platform&quot;</span><span class="p">:</span> <span class="s2">&quot;landsat-7&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;sensor&quot;</span><span class="p">:</span> <span class="s2">&quot;modis&quot;</span><span class="p">,</span> 
+  <span class="nt">&quot;derived_from&quot;</span><span class="p">:</span> <span class="kc">null</span>
+<span class="p">}</span>
 </pre></div>
 
 <h3 id="filter_bands">filter_bands</h3>
@@ -980,27 +980,27 @@
 <li><code>wavelengths</code>: number or two-element array of numbers containing a wavelength or a minimum and maximum wavelength respectively.</li>
 </ul>
 <h4 id="examples_1">Examples</h4>
-<div class="codehilite"><pre><span></span>{
-  &quot;process_id&quot;:&quot;filter_bands&quot;,
-  &quot;imagery&quot;:{
-    &quot;process_id&quot;:&quot;get_data&quot;,
-    &quot;data_id&quot;:&quot;Sentinel2A-L1C&quot;
-  },
-  &quot;bands&quot;:&quot;1&quot;
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+    <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2A-L1C&quot;</span>
+  <span class="p">},</span>
+  <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="s2">&quot;1&quot;</span>
+<span class="p">}</span>
 </pre></div>
 
-<div class="codehilite"><pre><span></span>{
-  &quot;process_id&quot;:&quot;filter_bands&quot;,
-  &quot;imagery&quot;:{
-    &quot;process_id&quot;:&quot;get_data&quot;,
-    &quot;data_id&quot;:&quot;Sentinel2A-L1C&quot;
-  },
-  &quot;wavelengths&quot;:[
-    1300,
-    2000
-  ]
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+    <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2A-L1C&quot;</span>
+  <span class="p">},</span>
+  <span class="nt">&quot;wavelengths&quot;</span><span class="p">:[</span>
+    <span class="mi">1300</span><span class="p">,</span>
+    <span class="mi">2000</span>
+  <span class="p">]</span>
+<span class="p">}</span>
 </pre></div>
 
 <h3 id="filter_daterange">filter_daterange</h3>
@@ -1015,14 +1015,14 @@
 </li>
 </ul>
 <h4 id="examples_2">Examples</h4>
-<div class="codehilite"><pre><span></span>{
-  &quot;process_id&quot;:&quot;filter_daterange&quot;,
-  &quot;imagery&quot;:{
-    &quot;process_id&quot;:&quot;get_data&quot;,
-    &quot;data_id&quot;:&quot;Sentinel2A-L1C&quot;
-  },
-  &quot;extent&quot;:&quot;2017-01-01/2017-01-31&quot;
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_daterange&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+    <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2A-L1C&quot;</span>
+  <span class="p">},</span>
+  <span class="nt">&quot;extent&quot;</span><span class="p">:</span><span class="s2">&quot;2017-01-01/2017-01-31&quot;</span>
+<span class="p">}</span>
 </pre></div>
 
 <h3 id="process_graph">process_graph</h3>
@@ -1033,13 +1033,13 @@
 <li><code>variables</code>: An object holding key-value-pairs with values for variables that are defined by the process graph. The key of the pair has to be the corresponding <code>variable_id</code> for the value specified. The replacement for the variable is the value of the pair.</li>
 </ul>
 <h4 id="examples_3">Examples</h4>
-<div class="codehilite"><pre><span></span>{
-  &quot;process_id&quot;:&quot;process_graph&quot;,
-  &quot;uri&quot;:&quot;http://otherhost.org/api/v1/users/12345/process_graphs/abcdef&quot;,
-  &quot;variables&quot;: {
-    &quot;data_id&quot;:&quot;Sentinel2A-L1C&quot;
-  }
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;process_graph&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;uri&quot;</span><span class="p">:</span><span class="s2">&quot;http://otherhost.org/api/v1/users/12345/process_graphs/abcdef&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;variables&quot;</span><span class="p">:</span> <span class="p">{</span>
+    <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2A-L1C&quot;</span>
+  <span class="p">}</span>
+<span class="p">}</span>
 </pre></div>
 
 <p><code>data_id</code> is a variable defined by the process graph stored at <code>http://otherhost.org/api/v1/users/12345/process_graphs/abcdef</code> and should be replaced with the string <code>Sentinal2A-L1C</code>.</p>
