--- a/v/0.3.0/processgraphs/index.html
+++ b/v/0.3.0/processgraphs/index.html
@@ -769,8 +769,8 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
   * <code>process_id</code>, except for objects of type <code>Process</code>
   * <code>variable_id</code>, except for objects of type <code>Variable</code></p>
 </div>
-<div class="admonition warning">
-<p class="admonition-title">Warning</p>
+<div class="admonition caution">
+<p class="admonition-title">Caution</p>
 <p>The expected names of arguments are defined by the process descriptions, which can be discovered with calls to <code>GET /processes</code> and <code>GET /udf_runtimes/{lang}/{udf_type}</code>. Therefore, the key name for a key-value-pair holding an image collection as value doesn't necessarily need to be named <code>imagery</code>. The name depends on the name of the corresponding process argument the image collection is assigned to. Example 2 demonstrates this by using <code>collection</code> as a key once. </p>
 </div>
 <h3 id="variables">Variables</h3>
@@ -789,61 +789,61 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
 <p>Whenever no value for the variable is defined, the <code>default</code> value is used. <code>&lt;Value&gt;</code> can be used as defined above, but MUST NOT be a <code>Variable</code>. Values for variables can be specified in the query string or body of endpoints supporting variables. See the API reference for more information.</p>
 <h2 id="examples">Examples</h2>
 <p><strong>Example 1:</strong> A full process graph definition including a variable for the data_id.</p>
-<div class="codehilite"><pre><span></span>{
-  &quot;process_id&quot;:&quot;min_time&quot;,
-  &quot;imagery&quot;:{
-    &quot;process_id&quot;:&quot;/udf/Python/custom_ndvi&quot;,
-    &quot;imagery&quot;:{
-      &quot;process_id&quot;:&quot;filter_daterange&quot;,
-      &quot;imagery&quot;:{
-        &quot;process_id&quot;:&quot;filter_bbox&quot;,
-        &quot;imagery&quot;:{
-          &quot;process_id&quot;:&quot;get_data&quot;,
-          &quot;data_id&quot;:{
-            &quot;variable_id&quot;:&quot;product&quot;,
-            &quot;description&quot;:&quot;Identifier or the dataset&quot;,
-            &quot;type&quot;:&quot;string&quot;,
-            &quot;default&quot;:&quot;S2_L2A_T32TPS_20M&quot;
-          }
-        },
-        &quot;left&quot;:652000,
-        &quot;right&quot;:672000,
-        &quot;top&quot;:5161000,
-        &quot;bottom&quot;:5181000,
-        &quot;srs&quot;:&quot;EPSG:32632&quot;
-      },
-      &quot;extent&quot;:&quot;2017-01-01/2017-01-31&quot;
-    },
-    &quot;red&quot;:&quot;B04&quot;,
-    &quot;nir&quot;:&quot;B8A&quot;
-  }
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;min_time&quot;</span><span class="p">,</span>
+  <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+    <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;/udf/Python/custom_ndvi&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+      <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_daterange&quot;</span><span class="p">,</span>
+      <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+        <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bbox&quot;</span><span class="p">,</span>
+        <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+          <span class="nt">&quot;data_id&quot;</span><span class="p">:{</span>
+            <span class="nt">&quot;variable_id&quot;</span><span class="p">:</span><span class="s2">&quot;product&quot;</span><span class="p">,</span>
+            <span class="nt">&quot;description&quot;</span><span class="p">:</span><span class="s2">&quot;Identifier or the dataset&quot;</span><span class="p">,</span>
+            <span class="nt">&quot;type&quot;</span><span class="p">:</span><span class="s2">&quot;string&quot;</span><span class="p">,</span>
+            <span class="nt">&quot;default&quot;</span><span class="p">:</span><span class="s2">&quot;S2_L2A_T32TPS_20M&quot;</span>
+          <span class="p">}</span>
+        <span class="p">},</span>
+        <span class="nt">&quot;left&quot;</span><span class="p">:</span><span class="mi">652000</span><span class="p">,</span>
+        <span class="nt">&quot;right&quot;</span><span class="p">:</span><span class="mi">672000</span><span class="p">,</span>
+        <span class="nt">&quot;top&quot;</span><span class="p">:</span><span class="mi">5161000</span><span class="p">,</span>
+        <span class="nt">&quot;bottom&quot;</span><span class="p">:</span><span class="mi">5181000</span><span class="p">,</span>
+        <span class="nt">&quot;srs&quot;</span><span class="p">:</span><span class="s2">&quot;EPSG:32632&quot;</span>
+      <span class="p">},</span>
+      <span class="nt">&quot;extent&quot;</span><span class="p">:</span><span class="s2">&quot;2017-01-01/2017-01-31&quot;</span>
+    <span class="p">},</span>
+    <span class="nt">&quot;red&quot;</span><span class="p">:</span><span class="s2">&quot;B04&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;nir&quot;</span><span class="p">:</span><span class="s2">&quot;B8A&quot;</span>
+  <span class="p">}</span>
+<span class="p">}</span>
 </pre></div>
 
 <p><strong>Example 2:</strong> If a process needs multiple processes as input, it is allowed to use arrays of the respective types.</p>
-<div class="codehilite"><pre><span></span>{
-  &quot;imagery&quot;:{
-    &quot;process_id&quot;:&quot;union&quot;,
-    &quot;collection&quot;:[
-      {
-        &quot;process_id&quot;:&quot;filter_bands&quot;,
-        &quot;imagery&quot;:{
-          &quot;process_id&quot;:&quot;get_data&quot;,
-          &quot;data_id&quot;:&quot;Sentinel2-L1C&quot;
-        },
-        &quot;bands&quot;:8
-      },
-      {
-        &quot;process_id&quot;:&quot;filter_bands&quot;,
-        &quot;imagery&quot;:{
-          &quot;process_id&quot;:&quot;get_data&quot;,
-          &quot;data_id&quot;:&quot;Sentinel2-L1C&quot;
-        },
-        &quot;bands&quot;:5
-      }
-    ]
-  }
-}
+<div class="codehilite"><pre><span></span><span class="p">{</span>
+  <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+    <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;union&quot;</span><span class="p">,</span>
+    <span class="nt">&quot;collection&quot;</span><span class="p">:[</span>
+      <span class="p">{</span>
+        <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
+        <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+          <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
+        <span class="p">},</span>
+        <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="mi">8</span>
+      <span class="p">},</span>
+      <span class="p">{</span>
+        <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
+        <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
+          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+          <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
+        <span class="p">},</span>
+        <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="mi">5</span>
+      <span class="p">}</span>
+    <span class="p">]</span>
+  <span class="p">}</span>
+<span class="p">}</span>
 </pre></div>
                 
                   
