Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/processgraphs/index.html
+++ b/v/0.3.0/processgraphs/index.html
@@ -765,7 +765,7 @@
 <p>A single process in a process graph is defined as follows:</p>
 <p><div class="codehilite"><pre><span></span>&lt;Process&gt; := {
   &quot;process_id&quot;: &lt;string&gt;,
-  &quot;description&quot;: &lt;string&gt;,
+  &quot;process_description&quot;: &lt;string&gt;,
   &quot;&lt;ArgumentName&gt;&quot;: &lt;Value&gt;,
   ...
 }
