Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/processgraphs/index.html
+++ b/v/0.3.0/processgraphs/index.html
@@ -795,7 +795,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
 </div>
 <div class="admonition caution">
 <p class="admonition-title">Caution</p>
-<p>The expected names of arguments are defined by the process descriptions, which can be discovered with calls to <code>GET /processes</code> and <code>GET /udf_runtimes/{lang}/{udf_type}</code>. Therefore, the key name for a key-value-pair holding an image collection as value doesn't necessarily need to be named <code>imagery</code>. The name depends on the name of the corresponding process argument the image collection is assigned to. Example 2 demonstrates this by using <code>collection</code> as a key once. </p>
+<p>The expected names of arguments are defined by the process descriptions, which can be discovered with calls to <code>GET /processes</code>. Therefore, the key name for a key-value-pair holding an image collection as value doesn't necessarily need to be named <code>imagery</code>. The name depends on the name of the corresponding process argument the image collection is assigned to. Example 2 demonstrates this by using <code>collection</code> as a key once. </p>
 </div>
 <h3 id="variables">Variables</h3>
 <p>Process graphs can also hold a variable, which can be filled in later. For shared process graphs this can be useful to make them more portable, e.g in case a back-end specific product name would be stored with the process graph.</p>
