Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/gettingstarted-backends/index.html
+++ b/v/0.3.0/gettingstarted-backends/index.html
@@ -654,7 +654,7 @@
 <p>For example, you could start by implementing the following endpoints in the first iteration:</p>
 <ul>
 <li>Capabilities: <code>GET /</code> and <code>GET /output_formats</code></li>
-<li>Data discovery: <code>GET /data</code> and <code>GET /data/{data_id}</code></li>
+<li>Data discovery: <code>GET /collections</code> and <code>GET /collections/{name}</code></li>
 <li>Process discovery: <code>GET /processes</code></li>
 <li>Data processing: <code>POST /preview</code></li>
 <li>Authentication (if required): <code>GET /credentials/basic</code></li>
