--- a/v/0.3.0/processgraphs/index.html
+++ b/v/0.3.0/processgraphs/index.html
@@ -812,7 +812,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
 <p>The value for <code>variable_id</code> is the name of the variable and can be any valid JSON key, but it is RECOMMENDED to use <a href="https://en.wikipedia.org/wiki/Snake_case">snake case</a> and limit the characters to <code>a-z</code>, <code>0-9</code> and <code>_</code>.</p>
 <p>Whenever no value for the variable is defined, the <code>default</code> value is used. <code>&lt;Value&gt;</code> can be used as defined above, but MUST NOT be a <code>Variable</code>. Values for variables can be specified in the query string or body of endpoints supporting variables. See the API reference for more information.</p>
 <h2 id="examples">Examples</h2>
-<p><strong>Example 1:</strong> A full process graph definition including a variable for the data_id.</p>
+<p><strong>Example 1:</strong> A full process graph definition including a variable for the collection <code>name</code>.</p>
 <div class="codehilite"><pre><span></span><span class="p">{</span>
   <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;min_time&quot;</span><span class="p">,</span>
   <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
@@ -823,7 +823,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
         <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bbox&quot;</span><span class="p">,</span>
         <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
           <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
-          <span class="nt">&quot;data_id&quot;</span><span class="p">:{</span>
+          <span class="nt">&quot;name&quot;</span><span class="p">:{</span>
             <span class="nt">&quot;variable_id&quot;</span><span class="p">:</span><span class="s2">&quot;product&quot;</span><span class="p">,</span>
             <span class="nt">&quot;description&quot;</span><span class="p">:</span><span class="s2">&quot;Identifier or the dataset&quot;</span><span class="p">,</span>
             <span class="nt">&quot;type&quot;</span><span class="p">:</span><span class="s2">&quot;string&quot;</span><span class="p">,</span>
@@ -853,7 +853,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
         <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
         <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
           <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
-          <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
+          <span class="nt">&quot;name&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
         <span class="p">},</span>
         <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="s2">&quot;8&quot;</span>
       <span class="p">},</span>
@@ -861,7 +861,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
         <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
         <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
           <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
-          <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
+          <span class="nt">&quot;name&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
         <span class="p">},</span>
         <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="s2">&quot;5&quot;</span>
       <span class="p">}</span>
