--- a/v/0.3.0/jobs/index.html
+++ b/v/0.3.0/jobs/index.html
@@ -791,7 +791,7 @@
           <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bbox&quot;</span><span class="p">,</span>
           <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
             <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
-            <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;S2_L2A_T32TPS_20M&quot;</span>
+            <span class="nt">&quot;name&quot;</span><span class="p">:</span><span class="s2">&quot;S2_L2A_T32TPS_20M&quot;</span>
           <span class="p">},</span>
           <span class="nt">&quot;left&quot;</span><span class="p">:</span><span class="mi">652000</span><span class="p">,</span>
           <span class="nt">&quot;right&quot;</span><span class="p">:</span><span class="mi">672000</span><span class="p">,</span>
@@ -840,7 +840,7 @@ omitted (the GeoTiff file contents)
           <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
           <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
             <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
-            <span class="nt">&quot;data_id&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
+            <span class="nt">&quot;name&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
           <span class="p">},</span>
           <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="mi">8</span>
         <span class="p">},</span>
