--- a/v/0.3.0/processgraphs/index.html
+++ b/v/0.3.0/processgraphs/index.html
@@ -822,10 +822,10 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
       <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
         <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bbox&quot;</span><span class="p">,</span>
         <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
-          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_collection&quot;</span><span class="p">,</span>
           <span class="nt">&quot;name&quot;</span><span class="p">:{</span>
             <span class="nt">&quot;variable_id&quot;</span><span class="p">:</span><span class="s2">&quot;product&quot;</span><span class="p">,</span>
-            <span class="nt">&quot;description&quot;</span><span class="p">:</span><span class="s2">&quot;Identifier or the dataset&quot;</span><span class="p">,</span>
+            <span class="nt">&quot;description&quot;</span><span class="p">:</span><span class="s2">&quot;Identifier of the collection&quot;</span><span class="p">,</span>
             <span class="nt">&quot;type&quot;</span><span class="p">:</span><span class="s2">&quot;string&quot;</span><span class="p">,</span>
             <span class="nt">&quot;default&quot;</span><span class="p">:</span><span class="s2">&quot;S2_L2A_T32TPS_20M&quot;</span>
           <span class="p">}</span>
@@ -852,7 +852,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
       <span class="p">{</span>
         <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
         <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
-          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_collection&quot;</span><span class="p">,</span>
           <span class="nt">&quot;name&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
         <span class="p">},</span>
         <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="s2">&quot;8&quot;</span>
@@ -860,7 +860,7 @@ A process MUST always contain a key-value-pair named <code>process_id</code> and
       <span class="p">{</span>
         <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;filter_bands&quot;</span><span class="p">,</span>
         <span class="nt">&quot;imagery&quot;</span><span class="p">:{</span>
-          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_data&quot;</span><span class="p">,</span>
+          <span class="nt">&quot;process_id&quot;</span><span class="p">:</span><span class="s2">&quot;get_collection&quot;</span><span class="p">,</span>
           <span class="nt">&quot;name&quot;</span><span class="p">:</span><span class="s2">&quot;Sentinel2-L1C&quot;</span>
         <span class="p">},</span>
         <span class="nt">&quot;bands&quot;</span><span class="p">:</span><span class="s2">&quot;5&quot;</span>
