Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/collections/index.html
+++ b/v/0.3.0/collections/index.html
@@ -747,9 +747,9 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 <h2 id="extensions">Extensions</h2>
 <p>STAC has several extensions (see their <a href="https://github.com/radiantearth/stac-spec">repository</a>) that can be used to better describe your data. Clients and server are not required to implement all of them, so be aware that some clients may not be able to read all your meta data.</p>
 <p>Some commonly used extensions are:
-<em> EO extension (mostly integrated within openEO)
-</em> Scientific extension
-* Dimensions extension</p>
+- EO extension (mostly integrated within openEO)
+- Scientific extension
+- Dimensions extension</p>
 <h2 id="links">Links</h2>
 <p>For data discovery in general and each collection you can specify a set of references. These can be alternate representations, e.g. data discovery via OGC WCS or OGC CSW, references to a license, references to actual raw data for downloading, detailed information about pre-processing, etc.</p>
 <div class="admonition note">
@@ -757,7 +757,7 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 <p>STAC requires to add a link with relation type <code>self</code> (see below). Although this is not technically necessary for openEO and we do not enforce you to provide such a link, we recommend to provide it anyway.</p>
 </div>
 <h3 id="common-link-relation-types">Common link relation types</h3>
-<p>The following types are commonly used as <code>rel</code> types in the links:</p>
+<p>The following table lists relation types that are commonly used as <code>rel</code> types in the links. The scope 'Collections' refers to the links that are related to a specific collection, 'Discovery' refers to links that are related to data discovery in general and are not about a specific collection.</p>
 <table>
 <thead>
 <tr>
@@ -770,7 +770,7 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 <tr>
 <td><code>self</code></td>
 <td>Absolute URL to the the data discovery endpoint or the collection itself.</td>
-<td>Data Discovery and Collections</td>
+<td>Discovery +Collections</td>
 </tr>
 <tr>
 <td><code>root</code> / <code>parent</code></td>
@@ -795,12 +795,12 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 <tr>
 <td><code>alternate</code></td>
 <td>An alternative representation of the metadata. This could be a web service such as OGC WCS or OGC CSW or a metadata document following another standard such as ISO 19115, INSPIRE or DCAT.</td>
-<td>Data Discovery and Collections</td>
+<td>Discovery +Collections</td>
 </tr>
 <tr>
 <td><code>about</code></td>
 <td>A resource that is related or further explains the entity, e.g. a user guide.</td>
-<td>Data Discovery and Collections</td>
+<td>Discovery +Collections</td>
 </tr>
 <tr>
 <td><code>derived_from</code></td>
