Deploy Open-EO/openeo-api to github.com/Open-EO/openeo-api.git:gh-pages

--- a/v/0.3.0/collections/index.html
+++ b/v/0.3.0/collections/index.html
@@ -746,10 +746,12 @@ Implementing the data discovery endpoints of openEO should also produce valid ST
 </div>
 <h2 id="extensions">Extensions</h2>
 <p>STAC has several extensions (see their <a href="https://github.com/radiantearth/stac-spec">repository</a>) that can be used to better describe your data. Clients and server are not required to implement all of them, so be aware that some clients may not be able to read all your meta data.</p>
-<p>Some commonly used extensions are:
-- EO extension (mostly integrated within openEO)
-- Scientific extension
-- Dimensions extension</p>
+<p>Some commonly used extensions are:</p>
+<ul>
+<li>EO extension (mostly integrated within openEO)</li>
+<li>Scientific extension</li>
+<li>Dimensions extension</li>
+</ul>
 <h2 id="links">Links</h2>
 <p>For data discovery in general and each collection you can specify a set of references. These can be alternate representations, e.g. data discovery via OGC WCS or OGC CSW, references to a license, references to actual raw data for downloading, detailed information about pre-processing, etc.</p>
 <div class="admonition note">
